fix: remove decorative lines for section titles on mobile screens

--- a/portfolio/css/index.css
+++ b/portfolio/css/index.css
@@ -108,6 +108,11 @@ body {
   height: 2px;
   background-color: #bdae82;
 }
+@media (max-width: 480px) {
+  .section__title::before, .skills__title::before, .section__title::after, .skills__title::after {
+    height: 0;
+  }
+}
 
 .link {
   color: #ffffff;
