--- a/portfolio/scss/_general.scss
+++ b/portfolio/scss/_general.scss
@@ -96,6 +96,10 @@ body {
       width: 100%;
       height: 2px;
       background-color: $color-gold;
+
+      @media (max-width: $breakpoint-mobile) {
+        height: 0;
+      }
     }
   }
 }
